--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.flyway.baseline-on-migrate=true
+
+api.security.token.secret=${JWT_TOKEN_SECRET:standard-pa$$phrase-jwt1@-key#-sEcret}
